deploy/manifests/pantry-io-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pantry-io
spec:
  replicas: 3
  selector:
    matchLabels:
      run: pantry-io
  template:
    metadata:
      labels:
        run: pantry-io
    spec:
      containers:
      - name: react-application
        image: kevinbyrd98/pantry-io:latest
        ports:
          - containerPort: 80
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
