deploy/manifests/pantry-io-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-io-service
spec:
  selector:
    run: pantry-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
